--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.0.1",
 		"axios": "^1.4.0",
 		"js-cookie": "^3.0.5",
 		"querystring": "^0.2.1",
